...
            android:id="@+id/scroll_component_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/fake_search_box_layout"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trendy_terms_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                android:visibility="gone">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
        <HorizontalScrollView android:id="@+id/mv_tiles_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/default_bg_color"
            android:visibility="gone"
            android:scrollbars="none"
            app:layout_scrollFlags="scroll">
...
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/tasks_view_items_vertical_spacing" />
        </HorizontalScrollView>
        <LinearLayout
            android:id="@+id/tab_switcher_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
...
                android:gravity="center_vertical|start"
                android:paddingStart="6dp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:text="@string/tab_switcher_carousel_title" />
            <TextView
                android:id="@+id/more_tabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:layout_marginBottom="-16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingEnd="12dp"
                android:text="@string/tab_switcher_carousel_view_all"/>
        </LinearLayout>
        <!-- TODO(crbug.com/982018): Make view stub to inflate only when needed. -->
        <FrameLayout
            android:id="@+id/carousel_tab_switcher_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/tab_carousel_start_margin"
            android:visibility="gone"
            app:layout_scrollFlags="scroll"/>
    </com.google.android.material.appbar.AppBarLayout>
...
        android:layout="@layout/incognito_description_container_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!-- Note that this FrameLayout can not be added to NestedScrollView, otherwise the
         RecyclerView added to this FrameLayout won't recycle. -->
    <FrameLayout
        android:id="@+id/tasks_surface_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</org.chromium.chrome.browser.tasks.TasksView>

