...
    android:paddingStart="@dimen/location_bar_lateral_padding" >

    <!-- TODO(crbug.com/900912): Fix and remove lint ignore -->
    <EditText
        tools:ignore="Autofill,LabelFor"
        style="@style/TextAppearance.NewTabPageSearchBoxText"
        android:id="@+id/search_box_text"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:background="@null"
        android:ellipsize="end"
...
