...
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height_no_shadow"
    android:clickable="true"
    android:visibility="gone">

    <Switch
        android:id="@+id/incognito_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
...
